--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server server/db.json --port 3000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "clsx": "^2.1.1",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dotenv": "^0.1.3",
     "react-router-dom": "^7.9.3",
     "tailwind-merge": "^3.3.1"
   },
