Stablish MongoDB connection from backend

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server server/db.json --port 3000"
+    "server": "json-server server/db.json --port 3001"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
