--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
